language/move-lang/tests/move_check/parser/hexstring_bad_value2.move
module M {
    public fun bad_value2(): vector<u8> {
        x"abcdefg"
    }
}
